--- a/example1/www/index.html
+++ b/example1/www/index.html
@@ -2,7 +2,7 @@
     <head><meta charset="UTF-8">
     <title>Hello, Pulumi!</title></head>
 <body>
-    <p>Hello, GridDynamics!</p>
-    <p>Made with ❤️ with <a href="https://pulumi.com">Pulumi</a></p>
+    <p><h1>Hello, GridDynamics!</h1></p>
+    <p><h2>Made with ❤️ with <a href="https://pulumi.com">Pulumi</a></h2></p>
     <img src="GD_53031361-0-gd-logo-hr-color-lig.png" />
 </body></html>
